# yesod-admin-examples

./: README
person/: Application.hs  Handlers.hs  Persist.hs  Settings.hs  Site.hs  main.hs  models  person.cabal  routes
person/Handlers/: AddGroupR.hs  AddPersonR.hs  RootR.hs
person/templates/: root.hamlet
